crates/datarig-tui/tests/snapshots/flows_chart__chart_bars_by_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_chart.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig default         ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                           │" Hidden by multi-width symbols: [(47, " ")]
"│    ▸ analytics             ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                             │"
"│    ▸ public                ││  3                                                                                     │"
"│    ▸ shop                  ││  4 SELECT u.name, o.status, o.total_amount                                             │"
"│                            ││  5 FROM shop.orders o                                                                  │"
"│                            ││  6 JOIN shop.users u ON u.id = o.user_id                                               │"
"│                            ││  7 WHERE o.status = 'paid';                                                            │"
"│                            ││  8                                                                                     │"
"│                            ││  9 SELECT * FROM analytics.events;                                                     │"
"│                            ││ 10                                                                                     │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭ Chart · Bars ──────────────────────────────────────────────────────────────────────────╮"
"│                            ││  Result 1  [Chart]  Messages                                                       H/L │"
"│                            ││ [Bars]  Horizontal bars   Line                                         12 fetched rows │"
"│                            ││ X day · Y orders · by shop · linear scale                                              │"
"│                            ││ 40┤                                                                                    │"
"│                            ││ 30┤                                                                           ▄▄▄▄▄▄   │"
"│                            ││   │                                                                     ▆▆▆▆▆▆██████   │"
"│                            ││   │                                                      ▂▂▂▂▂▂   ██████████████████   │"
"│                            ││ 20┤                                                ▄▄▄▄▄▄██████   ██████████████████   │"
"│                            ││   │                                          ▆▆▆▆▆▆████████████   ██████████████████   │"
"│                            ││ 10┤                           ▂▂▂▂▂▂██████   ██████████████████   ██████████████████   │"
"│                            ││   │                     ▄▄▄▄▄▄████████████   ██████████████████   ██████████████████   │"
"│                            ││   │             ▆▆▆▆▆▆  ██████████████████   ██████████████████   ██████████████████   │"
"│                            ││  0┤ ▂▂▂▂▂▂████████████  ██████████████████   ██████████████████   ██████████████████   │"
"│                            ││   └─────────────────────────────────────────────────────────────────────────────────── │"
"│                            ││         2026-10-01          2026-10-02           2026-10-03           2026-10-04       │"
"│                            ││ ■ north  ■ south  ■ east                                                               │"
"│                            ││ ▸ 2026-10-01 · north 1 · south 4 · east 7 · row 1                                      │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 12 rows · 3ms         │ v kind · x X · s values · y copy · c rows · : commands EN "
