crates/datarig-tui/tests/snapshots/flows_chart__chart_line_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_chart.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig default         ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                           │" Hidden by multi-width symbols: [(47, " ")]
"│    ▸ analytics             ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                             │"
"│    ▸ public                ││  3                                                                                     │"
"│    ▸ shop                  ││  4 SELECT u.name, o.status, o.total_amount                                             │"
"│                            ││  5 FROM shop.orders o                                                                  │"
"│                            ││  6 JOIN shop.users u ON u.id = o.user_id                                               │"
"│                            ││  7 WHERE o.status = 'paid';                                                            │"
"│                            ││  8                                                                                     │"
"│                            ││  9 SELECT * FROM analytics.events;                                                     │"
"│                            ││ 10                                                                                     │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭ Chart · Line ──────────────────────────────────────────────────────────────────────────╮"
"│                            ││  Result 1  [Chart]  Messages                                                       H/L │"
"│                            ││  Bars   Horizontal bars  [Line]             first 30 fetched rows · more on the server │"
"│                            ││ X day · Y orders, refunds · by none · linear scale                                     │"
"│                            ││ 100┤┊                  ⢠                              ⣰                              ⡜ │"
"│                            ││    │┊          ⡄      ⢀⠏⡆                    ⢀⡆      ⢠⠃⡇                    ⢠⢇      ⡜  │"
"│                            ││    │┊  ⡄      ⡸⢱      ⡜ ⢱            ⣰       ⡜⢸      ⡎ ⢸            ⡼⡀      ⡎⠸⡀    ⡰⠁  │"
"│                            ││    │┊ ⡜⢱     ⢠⠃⠈⡆    ⢰⠁ ⠈⡆   ⣰      ⢠⠃⡇     ⢰⠁ ⡇    ⡸   ⡇  ⢠⢇      ⢰⠁⢇     ⡜  ⢇   ⢰⠁   │"
"│                            ││  50┤┊⡰⠁⠘⡄    ⡎  ⢱   ⢀⠇   ⢱  ⡰⠁⡇    ⢀⠎ ⢸    ⢀⠇  ⢸   ⢠⠃   ⢸  ⡎⠸⡀    ⢠⠃ ⠸⡀   ⢰⠁  ⠸⡀ ⢀⠇    │"
"│                            ││    │⢠⠃  ⢇   ⡸   ⠈⡆ ⢀⠎⡀   ⠈⡆⢠⠃ ⢱⢀⡄  ⡜   ⡇  ⢀⡼⡀   ⡇ ⢠⠃ ⢀⠴⡀ ⡇⡜  ⢇  ⡠⠔⣯   ⢇  ⢠⠃    ⢇ ⡜   ⢀ │"
"│                            ││    │⠃   ⣸⠚⡄⡰⠁    ⢱⢀⡜⠊⢱    ⢱⠃ ⢀⠜⡅⠘⡄⡰⠁   ⢸⢀⠔⡝ ⢣   ⢸⢀⠎⢀⠔⠁ ⠱⡀⠸⠁  ⢸⡠⠊ ⡜⠈⢆  ⠸⡀⢀⠮⠚⡄   ⠸⣰⠁ ⡠⠒⠁ │"
"│                            ││    │┊⢀⡠⠊ ⡇⢸⡇    ⡠⠜⡟   ⢣    ⡠⠒⠁ ⢇ ⢱⡃   ⡠⠒⡇⡰⠁ ⠈⡆   ⡯⠊⠁    ⢣  ⢀⠔⠁⢇ ⡰⠁ ⠘⡄ ⣀⢗⡝  ⢱    ⠃⢠⠊    │"
"│                            ││    │⠔⠁   ⢱⠃⠱⡀ ⡠⠊      ⠈⡆⢀⠤⠊    ⢸⢀⠇⢣ ⡠⠊  ⠸⠁   ⠸⣀⠔⠊        ⢣⠔⠁  ⠸⣠⠃   ⠱⠊ ⠘    ⢇  ⢀⠔⠁     │"
"│                            ││   0┤┊       ⠱⠊         ⠘⠁       ⠏  ⠋          ⠁                ⠃            ⠘⡤⠊⠁       │"
"│                            ││    └─────────────────┬──────────────────┬───────────────────┬──────────────────┬────── │"
"│                            ││                 2026-09-07         2026-09-14          2026-09-21         2026-09-28   │"
"│                            ││ ■ orders  ■ refunds                                                                    │"
"│                            ││ ▸ 2026-09-01 · orders 37 · refunds 13 · row 1                                          │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 30+ rows (more pages) · 3ms        │ v kind · x X · s values · y copy · c rows EN "
