crates/datarig-tui/tests/snapshots/flows_chart__chart_menu_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_chart.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig default         ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                           │" Hidden by multi-width symbols: [(47, " ")]
"│    ▸ analytics             ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                             │"
"│    ▸ public                ││  3                                                                                     │"
"│    ▸ shop                  ││  4 SELECT u.name, o.status, o.total_amount                                             │"
"│                            ││  5 FROM shop.orders o                                                                  │"
"│                            ││  6 JOIN shop.users u ON u.id = o.user_id                                               │"
"│                            ││  7 WHERE o.status = 'paid';                                                            │"
"│                            ││  8                                                                                     │"
"│                            ││  9 SELECT * FROM analytics.events;                                                     │"
"│                            ││ 10                                                                                     │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭ ╭─────────────────────────────────────────────────────────╮────────────────────────────╮"
"│                            ││ │ › type to filter                                        │                        H/L │"
"│                            ││ │ 2026-09-01                                              │d rows · more on the server │"
"│                            ││ │  Chart: show the point's row in the grid          Enter │                            │"
"│                            ││ │  Chart: copy its numbers as TSV                       y │                            │"
"│                            ││ │  Chart: copy the drawing as text                      Y │                            │"
"│                            ││ │ Chart                                                   │                            │"
"│                            ││ │  Chart kind: bars                                     1 │████▌ 74                    │"
"│                            ││ │  Chart kind: horizontal bars                          2 │                            │"
"│                            ││ │  Chart kind: line                                     3 │                            │"
"│                            ││ │  Chart: choose the X column                           x │                            │"
"│                            ││ │  Chart: choose the value columns (Y)                  s │                            │"
"│                            ││ │  Chart: split the values into series by a column      b │                            │"
"│                            ││▼│  Chart: logarithmic scale on or off                   S │                            │"
"│                            ││ │  Results → show as a chart / as rows                  c │────────┬─────────────┬     │"
"│                            ││ │  Result tabs → next                                   L │       80           100     │"
"│                            ││ │  Result tabs → previous                               H │                            │"
"│                            ││ │  Results pane → zoom (maximise) / restore             z │                            │"
"╰────────────────────────────╯╰─╰─────────────────────────────────────────────────────────╯────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 30+ rows (more pages) · 3ms                                                    EN "
